fixed half message showing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -104,4 +104,8 @@
   .request {
     width: 100%;
   }
+  .chat-messages {
+    height: calc(100vh - 19%);
+    width: 100%;
+  }
 }
